# lh_lev2md

./: .augment-guidelines  .augmentignore  .gitignore  DEVELOPMENT.md  QUICKSTART.md  README.md  Tasks_2025-08-29T10-52-08.md  Tasks_2025-08-29T10-55-29.md  _lev2mdapi.cp37-win32.pyd  _lev2mdapi.cp37-win_amd64.pyd  demo_lev2_stock.py  lev2mdapi.py  main.py  pyproject.toml  requirements.txt  test.py  开发指南.md
.augment/rules/: base-rule.md
config/: config.yaml  level2_config.yaml
data/: trading_system.db
docs/: deployment_guide.md  task1_development_record.md  task2_development_record.md
examples/: task1_demo.py
scripts/: deploy.py  start_system.py
src/: __init__.py
src/config/: __init__.py  config_manager.py
src/data_processing/: __init__.py  data_handler.py  data_parser.py  market_data_receiver.py  subscription_manager.py
src/logging/: __init__.py  log_manager.py
src/trading_system/: __init__.py  main.py
src/trading_system/algorithms/: __init__.py  limit_up_break_analyzer.py  realtime_engine.py  stock_filter.py  test_limit_up_analyzer.py  test_realtime_engine.py  test_stock_filter.py
src/trading_system/api/: __init__.py  server.py  test_web_api.py  web_api.py
src/trading_system/config/: __init__.py  config_manager.py
src/trading_system/data/: __init__.py  connection_manager.py  level2_receiver.py  level2_service.py  mock_level2_receiver.py  realtime_processor.py  test_connection_manager.py  test_level2_receiver.py  test_realtime_processor.py
src/trading_system/engines/: __init__.py
src/trading_system/models/: __init__.py  base.py  data_lifecycle.py  database_init.py  scoring_data.py  stock_data.py
src/trading_system/services/: __init__.py  test_trading_service.py  trading_service.py
src/trading_system/strategies/: __init__.py
src/trading_system/utils/: __init__.py  exceptions.py  logger.py
src/trading_system/web/: __init__.py  static_server.py  test_web_interface.py
tests/: test_task1_market_data_receiver.py  test_task2_subscription_manager.py
需求文档/: 原始需求文档.md  开发计划文档.md  开发需求文档.md  股票自动交易系统开发计划.md  股票自动交易系统程序设计文档.md  详细程序设计文档.md
